<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="p_SoftIO" Id="{08bd4e2d-3139-4f8e-b2bd-85fa0e412ded}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_SoftIO
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Shakers *)
stSelector.stShaker01.i_xSwitch := iq_stM2SelectorA.i_EP2338_Ch5;
stSelector.stShaker02.i_xSwitch := iq_stM2SelectorA.i_EP2338_Ch6;
stSelector.stShaker03.i_xSwitch := iq_stM2SelectorA.i_EP2338_Ch7;
stSelector.stShaker04.i_xSwitch := iq_stM2SelectorA.i_EP2338_Ch8;

iq_stM2SelectorA.q_EP2338_Ch1	:= stSelector.stShaker01.q_xPwrDO;
iq_stM2SelectorA.q_EP2338_Ch2	:= stSelector.stShaker02.q_xPwrDO;
iq_stM2SelectorA.q_EP2338_Ch3	:= stSelector.stShaker03.q_xPwrDO;
iq_stM2SelectorA.q_EP2338_Ch4	:= stSelector.stShaker04.q_xPwrDO;

stSelector2.stShaker01.i_xSwitch := iq_stM2SelectorB.i_EP2338_Ch5;
stSelector2.stShaker02.i_xSwitch := iq_stM2SelectorB.i_EP2338_Ch6;
stSelector2.stShaker03.i_xSwitch := iq_stM2SelectorB.i_EP2338_Ch7;
stSelector2.stShaker04.i_xSwitch := iq_stM2SelectorB.i_EP2338_Ch8;

iq_stM2SelectorB.q_EP2338_Ch1	:= stSelector2.stShaker01.q_xPwrDO;
iq_stM2SelectorB.q_EP2338_Ch2	:= stSelector2.stShaker02.q_xPwrDO;
iq_stM2SelectorB.q_EP2338_Ch3	:= stSelector2.stShaker03.q_xPwrDO;
iq_stM2SelectorB.q_EP2338_Ch4	:= stSelector2.stShaker04.q_xPwrDO;

stRegProp1.iPressureRaw := iq_stPressCtrlA.i_EP4374_Ch1;
stRegProp2.iPressureRaw := iq_stPressCtrlA.i_EP4374_Ch2;

iq_stPressCtrlA.q_EP4374_Ch3 := stRegProp1.iSetpointRaw;
iq_stPressCtrlA.q_EP4374_Ch4 := stRegProp2.iSetpointRaw;

stRegProp3.iPressureRaw := iq_stPressCtrlB.i_EP4374_Ch1;
stRegProp4.iPressureRaw := iq_stPressCtrlB.i_EP4374_Ch2;

iq_stPressCtrlB.q_EP4374_Ch3 := stRegProp3.iSetpointRaw;
iq_stPressCtrlB.q_EP4374_Ch4 := stRegProp4.iSetpointRaw;

stGasMani.xOnline := NOT iq_stM3GasManifold.i_SyncUnitWC;

iq_stM3GasManifold.q_EP2338_Ch1 := stGasMani.stManiVlv1.qxDO;
iq_stM3GasManifold.q_EP2338_Ch2 := stGasMani.stManiVlv2.qxDO;
iq_stM3GasManifold.q_EP2338_Ch3 := stGasMani.stManiVlv3.qxDO;
iq_stM3GasManifold.q_EP2338_Ch4 := stGasMani.stManiVlv4.qxDO;
iq_stM3GasManifold.q_EP2338_Ch5 := stGasMani.stManiVlv5.qxDO;
iq_stM3GasManifold.q_EP2338_Ch6 := stGasMani.stManiVlv6.qxDO;
iq_stM3GasManifold.q_EP2338_Ch7 := stGasMani.stManiVlv7.qxDO;
iq_stM3GasManifold.q_EP2338_Ch8 := stGasMani.stManiVlv8.qxDO;

stGasMani.stManiVlv1.ixOPN := iq_stM3GasManifold.i_EP2338_Ch1;
stGasMani.stManiVlv2.ixOPN := iq_stM3GasManifold.i_EP2338_Ch2;
stGasMani.stManiVlv3.ixOPN := iq_stM3GasManifold.i_EP2338_Ch3;
stGasMani.stManiVlv4.ixOPN := iq_stM3GasManifold.i_EP2338_Ch4;
stGasMani.stManiVlv5.ixOPN := iq_stM3GasManifold.i_EP2338_Ch5;
stGasMani.stManiVlv6.ixOPN := iq_stM3GasManifold.i_EP2338_Ch6;
stGasMani.stManiVlv7.ixOPN := iq_stM3GasManifold.i_EP2338_Ch7;
stGasMani.stManiVlv8.ixOPN := iq_stM3GasManifold.i_EP2338_Ch8;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>